# field_network

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: core_system_completion_checklist.md  flow_graph_rag_design_memory.md  flow_graph_rag_dev_tasks.md  simulator_trace.html
examples/adapters/: calendar_adapter_example.py
src/ffrag/: __init__.py  ann_index.py  benchmark_cli.py  calibration.py  calibration_cli.py  compose.py  core_readiness_cli.py  dynamic_simulator.py  dynamic_simulator_cli.py  guardrails.py  models.py  pipeline.py  reporting.py  retrieval.py  router.py
src/ffrag/adapters/: __init__.py  base.py  registry.py  rules.py  validation.py
src/ffrag/benchmark/: __init__.py  runner.py  scenarios.py
src/ffrag/flow/: __init__.py  adjustment.py  analysis.py  control.py  dynamics.py  multiscale.py  phase.py  simulator.py  state.py  supervisory.py  topology.py
tests/: test_adapter_contracts.py  test_adapters.py  test_adjustment.py  test_ann_index.py  test_benchmark.py  test_calibration.py  test_core_readiness.py  test_core_readiness_cli.py  test_dynamic_simulator.py  test_dynamic_simulator_cli.py  test_dynamics.py  test_flow_analysis.py  test_flow_simulator.py  test_integration_end_to_end.py  test_integration_extremes.py  test_longrun_guardrails.py  test_models.py  test_multiscale.py  test_phase.py  test_pipeline.py  test_reporting.py  test_supervisory.py  test_topological_control.py  test_topology.py
